--- a/package.json
+++ b/package.json
@@ -52,16 +52,22 @@
     "electron-builder": "^20.39.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "url-loader": "^1.1.2",
     "vue": "^2.6.10",
-    "vue-electron": "^1.0.6",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-server": "^3.3.1",
+    "yaml-loader": "^0.5.0"
+  },
+  "dependencies": {
+    "@lemonce3/mitm": "^0.5.0",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.0"
   }
 }
