[ADDED] shortcut cropScreenshot

--- a/.editorconfig
+++ b/.editorconfig
@@ -3,17 +3,16 @@
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
+# newlines without newline ending every file
 [*]
 end_of_line = crlf
-insert_final_newline = true
+insert_final_newline = false
 
 # Matches multiple files with brace expansion notation
 # Set default charset
 [*.{js,py,vue}]
 charset = utf-8
 
-# Indentation override for all JS under lib directory
 [*.js]
 indent_style = tab
 indent_size = 2
