--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "fast-json-stringify": "^1.15.2",
+    "koa": "^2.7.0",
+    "socket.io": "^2.2.0",
     "vue": "^2.6.10",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^8.11.2",
@@ -101,9 +104,11 @@
     "json-loader": "^0.5.7",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "mini-css-extract-plugin": "0.4.0",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
+    "office-ui-fabric-core": "^10.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
