[ADDED] pack test

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "files": [
       "dist/electron/**/*"
     ],
+    "extraFiles": [
+      "bundle.js"
+    ],
     "dmg": {
       "contents": [
         {
