--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     }
   },
   "dependencies": {
+    "archiver": "^3.0.3",
     "axios": "^0.19.0",
     "docx": "^5.0.0-rc3",
+    "extract-zip": "^1.6.7",
     "fast-json-stringify": "^1.15.2",
     "formidable": "^1.2.1",
     "koa": "^2.7.0",
