--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "extract-zip": "^1.6.7",
     "fast-json-stringify": "^1.15.2",
     "formidable": "^1.2.1",
+    "fs-extra": "^8.1.0",
     "koa": "^2.7.0",
     "socket.io": "^2.2.0",
     "vue": "^2.6.10",
