--- a/packages/recorder-croper/package.json
+++ b/packages/recorder-croper/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "electron": "^6.0.10",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.40.2"
   }
