--- a/packages/recorder-example/package.json
+++ b/packages/recorder-example/package.json
@@ -4,17 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:renender": "webpack-dev-server --config ./build/webpack.dev.js",
-    "dev:main": "electron ."
+    "dev:renderer": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.dev.js",
+    "dev:main": "cross-env NODE_ENV=development electron ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@lemonce3/recorder": "^0.2.0",
+    "@lemonce3/recorder": "^0.3.0",
     "@lemonce3/recorder-store-fs": "^0.0.1",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
     "electron": "^6.0.10",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "url-loader": "^2.1.0",
+    "vue": "^2.6.10",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^15.7.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "yaml-loader": "^0.5.0"
   }
 }
