--- a/packages/recorder-screenshot/package.json
+++ b/packages/recorder-screenshot/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "electron": "^6.0.10",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.40.2"
   }
