--- a/packages/recorder/package.json
+++ b/packages/recorder/package.json
@@ -9,13 +9,37 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^8.0.1",
     "@lemonce3/recorder-croper": "^0.0.1",
     "@lemonce3/recorder-screenshot": "^0.0.1",
     "@or-change/duck": "^0.4.0",
     "@or-change/duck-electron": "^0.1.2",
     "@or-change/duck-web": "^0.1.2",
+    "@or-change/duck-web-koa": "^0.2.1",
+    "@or-change/duck-web-koa-router": "^0.1.2",
     "@or-change/duck-webpack": "^0.1.2",
+    "axios": "^0.19.0",
+    "docx-templates": "^3.1.1",
     "electron": "^6.0.9",
-    "webpack": "^4.40.2"
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "koa": "^2.8.1",
+    "koa-body": "^4.1.1",
+    "material-design-icons-iconfont": "^5.0.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "office-ui-fabric-core": "^10.1.0",
+    "socket.io": "^2.3.0",
+    "vue": "^2.6.10",
+    "vue-i18n": "^8.14.1",
+    "vue-loader": "^15.7.1",
+    "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify": "1.5.14",
+    "vuex": "^3.1.1",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2"
   }
 }
