--- a/packages/recorder/package.json
+++ b/packages/recorder/package.json
@@ -25,6 +25,7 @@
     "json-loader": "^0.5.7",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
+    "lodash": "^4.17.15",
     "material-design-icons-iconfont": "^5.0.1",
     "mini-css-extract-plugin": "^0.8.0",
     "office-ui-fabric-core": "^10.1.0",
